--- a/QuizChallengeSystem/templates/quiz.html
+++ b/QuizChallengeSystem/templates/quiz.html
@@ -8,6 +8,7 @@
 {% block css %}
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/quiz.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/nav-bar.css' %}"/>
 {% endblock %}
 
 {% block css-container %}
