--- a/QuizChallengeSystem/templates/quiz_result.html
+++ b/QuizChallengeSystem/templates/quiz_result.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/quiz_result.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/nav-bar.css' %}"/>
 {% endblock %}
 
 {% block css-container %}
