--- a/QuizChallengeSystem/templates/submodules_list.html
+++ b/QuizChallengeSystem/templates/submodules_list.html
@@ -17,10 +17,12 @@
 {% block content %}
     <h2>{{ module.name }}</h2>
     <ul>
-        {% for submodule in sub_modules %}
+        {% for sub_module in sub_modules %}
             <li>
-                <a href="{% url 'quiz_view' quiz_id %}">{{ submodule.name }}</a>
+                <span>{{ forloop.counter }}. </span>
+                <a{% if sub_module.quiz %}
+                    href="{% url 'quiz_view' sub_module.quiz.id %}"{% endif %}>{{ sub_module.name }}</a>
             </li>
         {% endfor %}
     </ul>
-{%  endblock %}
+{% endblock %}
