Only Quiz_result_view not working.

--- a/QuizChallengeSystem/templates/modules_list.html
+++ b/QuizChallengeSystem/templates/modules_list.html
@@ -61,7 +61,7 @@
             <h1>Quiz Page</h1>
         </header>
 
-            <h2>Concept Modules</h2>
+            <h2>Concept Modules to be assessed:</h2>
              <ul>
                 {% for concept_module in concept_modules %}
                     <li>
