--- a/QuizChallengeSystem/templates/quiz_summary.html
+++ b/QuizChallengeSystem/templates/quiz_summary.html
@@ -32,7 +32,7 @@
         {% endfor %}
     </ul>
     <div class="d-flex justify-content-center mt-3">
-     Start New Attempt
+     <a href="{% url 'start_new_attempt' quiz.id %}">Start New Attempt</a>
     </div>
 
 {% endblock %}
