--- a/QuizChallengeSystem/templates/submodules_list.html
+++ b/QuizChallengeSystem/templates/submodules_list.html
@@ -17,10 +17,11 @@
 {% block content %}
     <h2>{{ module.name }}</h2>
     <ul>
+        <h3>Attempt quiz?</h3>
         {% for sub_module in sub_modules %}
             {% if sub_module.quiz %}
                 <li>
-{#                    <a href="{% url 'quiz_summary' sub_module.quiz.id %}">Quiz {{ forloop.counter }} ({{ sub_module.quiz.name }})</a>#}
+                    <a href="{% url 'quiz_summary' sub_module.quiz.id %}">Quiz {{ forloop.counter }} ({{ sub_module.quiz.name }})</a>
                 </li>
             {% endif %}
         {% endfor %}
