--- a/LearningResource/templates/Submodules.html
+++ b/LearningResource/templates/Submodules.html
@@ -26,6 +26,10 @@
                 <a href="{% url 'lecture_view' submodule.prev_submodule.id %}" class="previous-wrapper">
                     <b class="previous">Previous</b>
                 </a>
+            {% else %}
+                <a href="{% url 'concept_module' submodule.parent_module.id %}" class="previous-wrapper">
+                    <b class="previous">Menu</b>
+                </a>
             {% endif %}
             <b class="artificial-intelligence-">
                 {{ submodule.parent_module.short_name }} - {{ submodule.name }}
@@ -34,6 +38,11 @@
                 <a href="{% url 'lecture_view' submodule.next_submodule.id %}?complete_current={{ submodule.id }}"
                    class="previous-wrapper">
                     <b class="previous">Next</b>
+                </a>
+            {% else %}
+                <a href="{% url 'lecture_view' submodule.id %}?complete_current={{ submodule.id }}"
+                   class="previous-wrapper">
+                    <b class="previous">Complete Module</b>
                 </a>
             {% endif %}
         </div>
