--- a/WelcomePage/templates/MenuPage.html
+++ b/WelcomePage/templates/MenuPage.html
@@ -9,11 +9,11 @@
     <div class="link-section">
         <div class="links6">
             <div class="learning-modules10">
-                <a href="{% url 'learning_modules' %}">
+                <a href="{% url 'module_handler' %}">
                     <img class="modulelearning-1" src="{% static 'public/modulelearning-1@3x.png' %}" alt="Thumbnail">
                 </a>
                 <div class="learning-modules-parent">
-                    <a class="learning-modules11" href="{% url 'learning_modules' %}">Learning modules</a>
+                    <a class="learning-modules11" href="{% url 'module_handler' %}">Learning modules</a>
                     <b class="this-is-where"
                     >This is where the tutorials and guides on Python can be
                         accessed. It will teach the user step by step on how to learn
