--- a/WelcomePage/templates/base_generic.html
+++ b/WelcomePage/templates/base_generic.html
@@ -32,7 +32,7 @@
             </a>
             <div class="btn9">
                 <div class="links5">
-                    <a class="learning-modules8" href="{% url 'learning_modules' %}">
+                    <a class="learning-modules8" href="{% url 'module_handler' %}">
                         <b class="learning-modules9">Learning Modules</b>
                     </a>
                     <a class="learning-modules8" href="{% url 'modules_list' %}">
