--- a/WelcomePage/templates/base_generic.html
+++ b/WelcomePage/templates/base_generic.html
@@ -35,7 +35,7 @@
                     <a class="learning-modules8" href="{% url 'module_handler' %}">
                         <b class="learning-modules9">Learning Modules</b>
                     </a>
-                    <a class="learning-modules8" href="{% url 'modules_list' %}">
+                    <a class="learning-modules8" href="{% url 'modules_list_quiz' %}">
                         <b class="learning-modules9">Quizzes</b>
                     </a>
                     <a class="learning-modules8">
