--- a/QuizChallengeSystem/templates/quiz_summary.html
+++ b/QuizChallengeSystem/templates/quiz_summary.html
@@ -1,13 +1,13 @@
 {% extends 'base_generic.html' %}
 {% load static %}
-{% load custom_filters %}
 
 {% block title %}
-    Concept modules
+    {{ module.short_name }} - Summary
 {% endblock %}
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/ConceptModulesPage.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/QuizSummary.css' %}"/>
 {% endblock %}
 
 {% block css-container %}
@@ -15,24 +15,48 @@
 {% endblock %}
 
 {% block content %}
-    <h1>QUIZ GRADES</h1>
-    <p>{{ attempts.first.quiz.name }}</p>
-    <p>Number of Attempts : {{ attempts.count }}</p>
+    <div class="summary-background">
+        <div class="breadcrumb">
+            <a href="{% url 'module_handler' %}">My courses</a> /
+            <a href="{% url 'concept_module' module.id %}">{{ module.short_name }}</a> /
+            <a href="{% url 'quiz_list' module.id %}">Quiz</a> /
+            <a href="#">{{ quiz.name }}</a>
+        </div>
+        <div class="summary-parent">
+            <h3>{{ quiz.name }}</h3>
+            <p class="centered-info">This quiz closed on {{ quiz.deadline|date:"l, d F Y, h:i A" }}</p>
+            <p class="centered-info">Grading method: Highest score</p>
 
-    <ul>
-        {% for attempt in attempts %}
-            <li>
-                <a href="{% url 'quiz_result' attempt.id %}">
-                    Attempt {{ forloop.counter }}
+            <h2>Summary of your previous attempts</h2>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th class="centered-header">Attempt</th>
+                    <th>State</th>
+                    <th class="centered-header">Score</th>
+                    <th class="centered-header">Review</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for attempt in attempts %}
+                    <tr>
+                        <td class="centered-header">{{ forloop.counter }}</td>
+                        <td>Submitted {{ attempt.created_at|date:"l, d F Y, h:i A" }}</td>
+                        <td class="centered-header">{{ attempt.score }}/{{ attempt.total_questions }}</td>
+                        <td class="centered-header"><a href="{% url 'quiz_result' attempt.id %}">Review</a></td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
 
-                    Completed on {{ attempt.created_at }}
-                    Score: {{ attempt.score }}/{{ attempt.total_questions }}
-                </a>
-            </li>
-        {% endfor %}
-    </ul>
-    <div class="d-flex justify-content-center mt-3">
-     <a href="{% url 'start_new_attempt' quiz.id %}">Start New Attempt</a>
+            <h3>Highest score: {{ best_score }}/{{ attempts.first.total_questions }}</h3>
+            {% if quiz.deadline > now %}
+                <div class="d-flex justify-content-center mt-3">
+                    <a href="{% url 'start_new_attempt' quiz.id %}" class="btn btn-primary">Re-attempt quiz</a>
+                </div>
+            {% else %}
+                <div style="text-align: center; font-size: 16px">No more attempts are allowed</div>
+            {% endif %}
+        </div>
     </div>
-
 {% endblock %}
