Update image to meet the team

--- a/WelcomePage/templates/WelcomePage.html
+++ b/WelcomePage/templates/WelcomePage.html
@@ -164,7 +164,7 @@
                     <img
                             class="member-child"
                             alt=""
-                            src="{% static 'public/rectangle-67@2x.png' %}"
+                            src="https://media.discordapp.net/attachments/1138474786914320486/1168317317223022662/2CE5C5DF-0E47-4F7E-93BC-2E430A20F793.JPG?ex=6551534a&is=653ede4a&hm=b189314ba852b123430178b5b4ffe3eb87a8191f87f1b5958b1cca8af72ba3be&=&width=530&height=662"
                     />
 
                     <div class="matthew-parent">
@@ -176,7 +176,7 @@
                     <img
                             class="member-child"
                             alt=""
-                            src="{% static 'public/rectangle-671@2x.png' %}"
+                            src="https://media.discordapp.net/attachments/1138474786914320486/1168317671717208095/e3de269d-fd58-468a-a32c-a2de3ed53910.JPG?ex=6551539f&is=653ede9f&hm=34ab92e1f979ce01bbaacadf48db4a6bb856a9ae274d3dcc91f5b3887398533e&=&width=496&height=662"
                     />
 
                     <div class="matthew-parent">
@@ -190,7 +190,7 @@
                     <img
                             class="member-child"
                             alt=""
-                            src="{% static 'public/rectangle-672@2x.png' %}"
+                            src="https://media.discordapp.net/attachments/1138474786914320486/1168317669800419328/82c471ae-3c86-4b66-bbf5-113ad5727a6d.JPG?ex=6551539e&is=653ede9e&hm=8e8e3a27e1ccc77e8f895293f887c0cd9f1a1498313e9f0ca334d0e7c5ed841f&=&width=532&height=662"
                     />
 
                     <div class="matthew-parent">
@@ -202,7 +202,7 @@
                     <img
                             class="member-child"
                             alt=""
-                            src="{% static 'public/rectangle-673@2x.png' %}"
+                            src="https://cdn.discordapp.com/attachments/1138474786914320486/1168317670521831424/81e8a3be-d4eb-4faf-b942-caa0d65162a2.JPG?ex=6551539e&is=653ede9e&hm=78e40bb5431a5b9466cd9c51b31b641237e38e57988dcb9dd1aa467e14986522&"
                     />
 
                     <div class="matthew-parent">
