--- a/WelcomePage/templates/base_generic.html
+++ b/WelcomePage/templates/base_generic.html
@@ -58,7 +58,7 @@
                         <img
                                 class="profile-pic-icon5"
                                 alt="Default Picture"
-                                src="{% static 'public/profile-pic@2x.png' %}"
+                                src="https://i.pinimg.com/236x/47/5a/86/475a86177aeedacf8dc7f5e2b4eff61f.jpg"
                         />
                     {% endif %}
                 </button>
@@ -162,7 +162,7 @@
                     <img
                             class="profile-pic-icon6"
                             alt="Default Picture"
-                            src="{% static 'public/profile-pic@2x.png' %}"
+                            src="https://i.pinimg.com/236x/47/5a/86/475a86177aeedacf8dc7f5e2b4eff61f.jpg"
                     />
                 {% endif %}
 
